--- a/cssp1/style.css
+++ b/cssp1/style.css
@@ -87,6 +87,6 @@ section > div.box3 > p:nth-child(1) {width: 50%; height: 100%; background: url(.
 section > div.box3 > p:nth-child(2) {background-color: #ccc;}
 section > div.box3 > p:nth-child(3) {background: url(../imgp1/ti9.jpg) no-repeat center/cover; background-color: #bbb;}
 section > div.box3 > p:nth-child(4) {width: 50%; background-color: #aaa;}
-section > div.box3 > p:nth-child(5) {height: 50%; background: url(../img/ti12.png) no-repeat center /cover; background-color: #888;}
+section > div.box3 > p:nth-child(5) {height: 50%; background: url(../imgp1/ti12.png) no-repeat center top/70%; background-color: #fff;}
 section > div.box3 > p:nth-child(6) {background-color: #777;}
 section > div.box3 > p:nth-child(7) {background: url(../imgp1/ti16.jpg) no-repeat center -50px/cover; background-color: #666;}
