--- a/assets/css/sub.css
+++ b/assets/css/sub.css
@@ -3,22 +3,22 @@
 body {overflow-x: hidden;}
 ::-webkit-scrollbar {width: 10px;}
 ::-webkit-scrollbar-track {background: #dadada;}
-::-webkit-scrollbar-thumb {background: #8988ff; border-radius: 50px;}
+::-webkit-scrollbar-thumb {background: burlywood; border-radius: 50px;}
 ::-webkit-scrollbar-thumb:hover {background: #8988ff;}
 ::selection {background-color: #8988ff; color: #fff;}
 
 /* menu */
 #menu {position: absolute; display: block; width: 100%; height: 60px; top: 0; margin: 0; z-index: 9;}
 .btn_menu {position:fixed; width:50px; height:50px; background-color:#FFF; box-shadow:0px 0px 15px 0px rgba(0,0,0,0.25); z-index:99; top:25px; right:25px; border-radius:50%; cursor:pointer; transition:all ease 0.5s;}
-.btn_menu span {width:22px; height:2px; display:block; background-color:#706FFF; margin:16px auto 0px; position:relative;}
-.btn_menu span:before {content:""; position:absolute; width:22px; height:2px; top:8px; left:0; background-color:#706FFF}
-.btn_menu span:after {content:""; position:absolute; width:22px; height:2px; top:16px; left:0; background-color:#706FFF}
-.btn_menu:hover {background-color:#ff8988;}
+.btn_menu span {width:22px; height:2px; display:block; background-color:burlywood; margin:16px auto 0px; position:relative;}
+.btn_menu span:before {content:""; position:absolute; width:22px; height:2px; top:8px; left:0; background-color:burlywood}
+.btn_menu span:after {content:""; position:absolute; width:22px; height:2px; top:16px; left:0; background-color:burlywood}
+.btn_menu:hover {background-color:#ad8a85;}
 .btn_menu:hover span {background-color:#FFF}
 .btn_menu:hover span:before {background-color:#FFF}
 .btn_menu:hover span:after {background-color:#FFF}
 
-.btn_menu.active {background-color:#ff8988;}
+.btn_menu.active {background-color:#ad8a85;}
 .btn_menu.active span {background-color:#FFF; margin:24px auto 0px; transform: rotate(45deg); -webkit-transform: rotate(45deg); -moz-transform: rotate(45deg);}
 .btn_menu.active span:before {background-color:#FFF; margin:-8px auto 0px; transform: rotate(90deg); -webkit-transform: rotate(90deg); -moz-transform: rotate(90deg);}
 .btn_menu.active span:after {display:none;}
@@ -27,7 +27,7 @@ body {overflow-x: hidden;}
 .hidden_menu.show {width:23%;}
 .hidden_menu li {cursor:pointer; transform: translateX(-0px); transition:all 0.5s linear; transition-delay:0s; width:auto; opacity:1.0}
 .hidden_menu li.active {opacity:1.0;}
-.hidden_menu li .mlnb {position:relative; font-size: 3.2rem; font-weight: 600; background:linear-gradient(to right, #8988ff, #8988ff 50%,  #D5D5FF 50%); background-clip:text; -webkit-background-clip:text; -moz-background-clip:text;
+.hidden_menu li .mlnb {position:relative; font-size: 3.2rem; font-weight: 600; background:linear-gradient(to right, burlywood, burlywood 50%,  #967053 50%); background-clip:text; -webkit-background-clip:text; -moz-background-clip:text;
 -webkit-text-fill-color: transparent; background-size: 200% 100%; background-position: 100%;}
 .hidden_menu li .mlnb.active {opacity:1.0; transition: .3s ease;}
 .hidden_menu li .mlnb.active:hover {background-position:0 100%;}
@@ -38,9 +38,9 @@ body {overflow-x: hidden;}
     margin-top: 12px;
     padding: 12px 20px;
     height: 25px;
-    color: #8988ff;
+    color: burlywood;
     border-radius: 4px;
-    border: solid 1px #8988ff;
+    border: solid 1px burlywood;
     cursor: pointer;
     position: relative;
     z-index: 1;
@@ -50,7 +50,7 @@ body {overflow-x: hidden;}
     -o-transition: all 0.4s;
     transition: all 0.4s;
 }
-.btn-line:hover {text-decoration: none; color: #fff; background-color: #8988ff;}
+.btn-line:hover {text-decoration: none; color: #fff; background-color: burlywood;}
 .btn-line::after {
     content: "";
     width: 0%;
@@ -63,7 +63,7 @@ body {overflow-x: hidden;}
     -ms-transition: all 0.4s;
     -o-transition: all 0.4s;
     transition: all 0.4s;
-    background: #8988ff;
+    background: burlywood;
 }
 .btn-line:hover {color: #fff;}
 .btn-line:hover::after {width: 100%; z-index: -1;}
@@ -75,13 +75,13 @@ body {overflow-x: hidden;}
 .sub {position: relative; width: 100vw; height: auto;}
 .sub .sub_wrap {position: relative; margin: 50px auto; width: 100%; height: 100%; max-width: 1080px; transition: width .4s;}
 .sub .sub_wrap .list_title {position: relative; width: 100%; height: 80px; margin-bottom: 40px; display: flex; justify-content: space-between;}
-.sub .sub_wrap .list_title .number {margin-right: 40px; font-size: 5rem; font-weight: 500; color: #ff8988;} 
+.sub .sub_wrap .list_title .number {margin-right: 40px; font-size: 5rem; font-weight: 500; color: #967053;} 
 .sub .sub_wrap .list_title .site_title {padding-left: 40px; font-size: 3.5rem; font-weight: normal; font-family: "GongGothicMedium";}
 
 .sub .sub_wrap .next_prev {position: relative; display: flex; justify-content: space-between; width: 100%; height: 30px; margin: 0 auto 100px auto;}
 .sub .sub_wrap .next_prev a {height: 100%; font-size: 1.7rem; transition: transform .3s;}
-.sub .sub_wrap .next_prev a .xi-angle-left:before {color: #8988ff;}
-.sub .sub_wrap .next_prev a .xi-angle-right:before {color: #8988ff;}
+.sub .sub_wrap .next_prev a .xi-angle-left:before {color: burlywood;}
+.sub .sub_wrap .next_prev a .xi-angle-right:before {color: burlywood;}
 .sub .sub_wrap .next_prev a .next_prev span {display: inline-block; line-height: 30px; height: 100%; top: 50px;}
 .sub .sub_wrap .next_prev a:first-child span {margin-left: 16px;}
 .sub .sub_wrap .next_prev a:last-child span {margin-right: 16px;}
@@ -96,7 +96,7 @@ body {overflow-x: hidden;}
 .bg03 {margin-top: 100px; width: 100%; height: auto; background: url(../img/sub/sub_bg03.png) no-repeat; background-size: contain;}
 
 .port_con {position: relative;}
-.port_con h2 {width: 120px; font-size: 2rem; font-weight: 500; color: #ff8988;}
+.port_con h2 {width: 120px; font-size: 2rem; font-weight: 500; color: #967053;}
 .port_con .list {margin: 30px 0; display: flex;}
 .port_con .list p {font-size: 1.8rem;}
 .port_con .list p a {border-bottom: 1px solid #323232;}
